# setseer

./: .gitignore  Check.hs  Cli.hs  Color.hs  Glue.hs  JuliaSet.hs  Main.hs  MandelbrotSet.hs  Pixel.hs  README.md  Setseer.hs  setseer.cabal
sources/: Check.hs  Cli.hs  Main.hs
sources/Setseer/: Color.hs  Glue.hs  JuliaSet.hs  MandelbrotSet.hs  Pixel.hs
