-- general:
name:                setseer
version:             0.1.0.0
synopsis:            Explore the Mandelbrot or Julia set.
-- description:         
homepage:            https://bitbucket.org/erikedlund/setseer
license:             GPL-3
license-file:        LICENSE
author:              Erik Edlund
maintainer:          erik.edlund@32767.se
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable setseer
    main-is:           Main.hs
    hs-source-dirs:    sources/
    build-depends:
        base >=4.0 && < 5.0,
        containers >=0.1 && < 1.0,
        regex-posix >=0.10 && < 1.0,
        vector >=0.1 && < 1.0,
        JuicyPixels >=3.0 && < 4.0,
        QuickCheck >=2.0 && < 3.0

